--- a/Feedbacksystem/templates/pages/eventhub_closed.html
+++ b/Feedbacksystem/templates/pages/eventhub_closed.html
@@ -56,6 +56,7 @@
             <p>Location: {{ i.location }}</p>
             <p>Description: {{ i.description }}</p>
             <p>Evaluation Status: {{ i.evaluation_identifier }}</p>
+            <p>Created by: {{ i.get_author_name }}</p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>  
