--- a/Feedbacksystem/templates/pages/view_faculty_event_evaluations.html
+++ b/Feedbacksystem/templates/pages/view_faculty_event_evaluations.html
@@ -35,7 +35,7 @@
         <tr>
             <td> {{ i.event.title }}</td>
     
-            <td> {{ i.suggestions_and_comments }}</td>
+            <td> {{ i.suggestions_and_comments|truncatechars:40 }}</td>
     
     
             <td> {{ i.average_rating }}</td>
