--- a/Feedbacksystem/templates/pages/view_faculty_webinar_evaluations.html
+++ b/Feedbacksystem/templates/pages/view_faculty_webinar_evaluations.html
@@ -179,6 +179,14 @@
                 <td>{{ event_form_details.get_rating_category }}</td>
             </tr>
             <tr>
+                <td>Comment</td>
+                <td>{{ event_form_details.suggestions_and_comments }}</td>
+            </tr>
+            <tr>
+                <td>Polarity</td>
+                <td>{{ event_form_details.predicted_sentiment }}</td>
+            </tr>
+            <tr>
                 <td>Academic Year</td>
                 <td>{{ event_form_details.academic_year }}</td>
             </tr>
