--- a/Feedbacksystem/templates/pages/password_reset_complete.html
+++ b/Feedbacksystem/templates/pages/password_reset_complete.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-  <title> Administrator Login </title>
+  <title> Password Reset Sent </title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -13,14 +13,6 @@
   <link rel="icon" href="static/images/cvsulogo.png" type="image/png">
   <link rel="stylesheet" href="{% static 'css/login_page.css'%}">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-  <style>
-    input[type="submit"] {
-      background-color: #f7b205; 
-      font-weight: 600;
-      margin-top: 1.5em;
-     
-    }
-  </style>
 
 </head>
 <body>
@@ -35,15 +27,13 @@
   </div>
   {% endif %}
 <div class="container-body">
-   
-<form method="POST" action="">
-    {% csrf_token %}
-    <a  class="admin"  style="margin-right: 1em;"href = "{% url 'signin' %}"> <i class="bi bi-arrow-bar-left"></i> Back to Login </a> 
-    <label id ="admin">Admin Username:</label>
-    <input class="admininput" type = "text" name="username" placeholder="Enter Admin Username">
-    <label id ="admin">Admin Password:</label>
-    <input class="admininput" type = "password" name="password" placeholder="Enter Admin Password">
-    <input   class="admininput" type = "submit" value="Submit" style="font-weight: bold;"> 
+<div class="container" style="padding: 5em; padding-top: 9em;">
+<h3>Password reset complete</h3>
+<p>Your password has been set. You may go ahead and log in now.</p>
+<p><a class="admininput" style="font-weight: bold; text-decoration: underline;" href="{% url 'signin' %}"> Log in </a></p>
+</div>
+</div>
+
 
 </form>
 </div>
