--- a/Feedbacksystem/templates/pages/password_reset_form.html
+++ b/Feedbacksystem/templates/pages/password_reset_form.html
@@ -13,15 +13,15 @@
   <link rel="icon" href="static/images/cvsulogo.png" type="image/png">
   <link rel="stylesheet" href="{% static 'css/login_page.css'%}">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
   <style>
     input[type="submit"] {
       background-color: #f7b205; 
       font-weight: 600;
-      margin-top: 1.5em;
-     
+      margin-top: 1em;
+    width: 100%;
     }
   </style>
-
 </head>
 <body>
   {% if messages %}
@@ -35,15 +35,13 @@
   </div>
   {% endif %}
 <div class="container-body">
-   
 <form method="POST" action="">
     {% csrf_token %}
-    <a  class="admin"  style="margin-right: 1em;"href = "{% url 'signin' %}"> <i class="bi bi-arrow-bar-left"></i> Back to Login </a> 
-    <label id ="admin">Admin Username:</label>
-    <input class="admininput" type = "text" name="username" placeholder="Enter Admin Username">
-    <label id ="admin">Admin Password:</label>
-    <input class="admininput" type = "password" name="password" placeholder="Enter Admin Password">
-    <input   class="admininput" type = "submit" value="Submit" style="font-weight: bold;"> 
+<div class="mb-5">
+    {{form}}
+    <input  class="admininput" type = "submit" value="Update Password" style="font-weight: bold;"> 
+</div>
+
 
 </form>
 </div>
