--- a/Feedbacksystem/templates/pages/password_reset_sent.html
+++ b/Feedbacksystem/templates/pages/password_reset_sent.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-  <title> Administrator Login </title>
+  <title> Password Reset Sent </title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -13,14 +13,6 @@
   <link rel="icon" href="static/images/cvsulogo.png" type="image/png">
   <link rel="stylesheet" href="{% static 'css/login_page.css'%}">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-  <style>
-    input[type="submit"] {
-      background-color: #f7b205; 
-      font-weight: 600;
-      margin-top: 1.5em;
-     
-    }
-  </style>
 
 </head>
 <body>
@@ -35,15 +27,13 @@
   </div>
   {% endif %}
 <div class="container-body">
-   
-<form method="POST" action="">
-    {% csrf_token %}
-    <a  class="admin"  style="margin-right: 1em;"href = "{% url 'signin' %}"> <i class="bi bi-arrow-bar-left"></i> Back to Login </a> 
-    <label id ="admin">Admin Username:</label>
-    <input class="admininput" type = "text" name="username" placeholder="Enter Admin Username">
-    <label id ="admin">Admin Password:</label>
-    <input class="admininput" type = "password" name="password" placeholder="Enter Admin Password">
-    <input   class="admininput" type = "submit" value="Submit" style="font-weight: bold;"> 
+<div class="container" style="padding: 5em; padding-top: 9em;">
+  <h3>Password reset sent</h3>
+  <p>We’ve emailed you instructions for setting your password, if an account exists with the email you entered. You should receive them shortly.</p>
+  <p>If you don’t receive an email, please make sure you’ve entered the address you registered with, and check your spam folder.</p>
+</div>
+</div>
+
 
 </form>
 </div>
