--- a/Feedbacksystem/templates/pages/pending_evaluations.html
+++ b/Feedbacksystem/templates/pages/pending_evaluations.html
@@ -45,7 +45,7 @@
                 <td>{{ i.section_subject_faculty.faculty }}</td>
                 <td>{{ i.average_rating }}</td>
                 <td>{{ i.get_rating_category }}</td>
-                <td>{{ i.comments }}</td>
+                <td>{{ i.comments|truncatechars:40 }}</td>
                 <td>{{ i.predicted_sentiment }}</td>
                 <td>{{ i.academic_year }}</td>
                 <td>{{ i.semester }}</td>
