--- a/Feedbacksystem/templates/pages/view_department.html
+++ b/Feedbacksystem/templates/pages/view_department.html
@@ -1,6 +1,6 @@
 {% extends "pages/admin.html" %}
 
-{% block title %}{{ section.name }} Details{% endblock %}
+{% block title %}{{ department.name }} Details{% endblock %}
 
 {% block header %}
 
