--- a/Feedbacksystem/templates/pages/admin.html
+++ b/Feedbacksystem/templates/pages/admin.html
@@ -46,6 +46,7 @@
 </div>
     <nav id="sidebar" class="sidebar lightsidebar"> 
       <ul class="nav flex-column nav-pills nav-container">
+        {% if is_admin %}
         <li class="nav-item">
           <a class="nav-link {% if request.path == '/administrator' %} active {% endif %}" href="/administrator">
           <i class="bi bi-grid-1x2-fill nav-icon"></i> <b>Dashboard</b>
@@ -53,7 +54,7 @@
         
         </a>
       </li>
-       
+
       <li class="nav-item dropdown">
         <button class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <i class="bi bi-chat-left-fill nav-icon"></i> <b>Evaluations</b>
@@ -64,6 +65,7 @@
             <a class="dropdown-item" href="{% url 'stakeholderevaluations' %}">Stakeholder Evaluations</a>
           </div>
         </li>
+    
         <li class="nav-item">
           <a class="nav-link {% if request.path == '/forms' %} active {% endif %}" href="{% url 'forms' %}">
             <i class="bi bi-ui-radios nav-icon"></i> <b>Forms</b>
@@ -96,6 +98,7 @@
         <i class="bi bi-people-fill nav-icon"></i> <b>Users</b>
       </a>
     </li>
+      {% endif %}
     <li class="nav-item">
       <a class="nav-link" href="{% url 'adminlogout' %}">
         <i class="bi bi-box-arrow-in-left nav-icon"></i> <b>Logout</b>
