--- a/Feedbacksystem/templates/pages/login.html
+++ b/Feedbacksystem/templates/pages/login.html
@@ -16,11 +16,10 @@
 
 <body>
     {% if messages %}
-    <div class="container  col-md-5 col-12 mt-5 pt-5">
+    <div class="container  col-md-5 col-12" style="margin-top: 10em;">
         {% for message in messages %}
-        <div class="alert alert-light alert-dismissible fade show" role="alert">
+        <div class="alert {% if message.tags == 'error' %}alert-danger{% elif message.tags == 'success' %}alert-success{% endif %}" role="alert">
             {{ message }}
-            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
         {% endfor %}
     </div>
@@ -32,7 +31,21 @@
     
                 <br>
                 {% csrf_token %}
-                {{ registration_form.as_p }}
+                <div class="form-group col-12 col-lg-10 col-md-11">
+                    <label for="{{ registration_form.student_number.id_for_label }}">Student Number:</label>
+                    {{ registration_form.student_number }}
+                </div>
+                
+                <div class="form-group col-12 col-lg-10 col-md-11">
+                    <label for="{{ registration_form.password1.id_for_label }}">Password:</label>
+                    {{ registration_form.password1 }}
+                </div>
+                
+                <div class="form-group col-12 col-lg-10 col-md-11">
+                    <label for="{{ registration_form.password2.id_for_label }}">Confirm Password:</label>
+                    {{ registration_form.password2 }}
+                </div>
+                
                 
                 <button onclick="showAlert()" type = "Submit" name="register"><b>Register</b></button>
           
