--- a/Feedbacksystem/templates/pages/facultyfeedbackandevaluations.html
+++ b/Feedbacksystem/templates/pages/facultyfeedbackandevaluations.html
@@ -67,7 +67,7 @@
                 <td>{{ i.semester }}</td>
                 <td>
                     <a href="{% url 'view_evaluation_form' i.pk %}" style=" text-decoration: none;">
-                        <button class="btn btn-outline-primary d-flex align-items-center" style=" padding:1px 2px 1px 7px">
+                        <button class="btn btn-primary d-flex align-items-center" style=" padding:1px 2px 1px 7px">
                           <i class="bi bi-eye-fill" style="font-size:20px; margin-right: 5px;"></i></button></a>
             
                     </td>
