--- a/Feedbacksystem/templates/pages/home.html
+++ b/Feedbacksystem/templates/pages/home.html
@@ -130,6 +130,7 @@
       <h3>Academic Year: {{ evaluation_status.academic_year }}</h3>
       <h4>Semester: {{ evaluation_status.semester }}</h4>
       <h4>Student Evaluation for Teachers: {{evaluation_status.evaluation_status}} </h4>
+      <h5>Evaluation End Date: {{evaluation_status.evaluation_end_date}} </h5>
      </div>
     {% endblock header %}
    
