--- a/Feedbacksystem/templates/pages/admin_faculty_evaluations_sections_view_forms.html
+++ b/Feedbacksystem/templates/pages/admin_faculty_evaluations_sections_view_forms.html
@@ -5,7 +5,7 @@
 {% block header %}
 <div class="row">
   <div class="col-md-6">
-    <h2>Faculty Evaluations</h2>
+    <h2>Faculty Evaluations for {{ selected_section.name }} </h2>
   </div>
   <div class="col-lg-5 col-md-5 mt-1 evaluations_search" style="margin-left: auto;">
     <form method="get" action="" class="d-flex" style="gap: 1em;">
@@ -74,9 +74,7 @@
   <div class="col-lg-2 col-md-2 mb-1">
     <a href="{% url 'evaluations_csv' %}?{{ request.GET.urlencode }}" class="btn btn-primary">Export to CSV</a>
   </div>
-  <div class="col-md-3 col-sm-4 col-12">
-    <a href="{% url 'pending_evaluations' %}" class="btn btn-secondary" ><b>Pending Evaluations</b></a>
-</div>
+
 </div>
   <div class="table-responsive mt-2 evaluations_table">
     <table class="table table-bordered ">
@@ -92,7 +90,7 @@
           <th scope="col">Options</th>
           
         </tr>
-        {% for i in evaluation %}
+        {% for i in page_obj.object_list %}
         <tr>
             <td>{{ i.section_subject_faculty.subjects }} </td>
             <td>{{ i.section_subject_faculty.faculty }}</td>
